upgrade to 1.0.11, support fixed fee rate
