# api.ts
@@ -4,7 +4,7 @@
  * MVC Bridge API Spec
  * API definition for Mvc Bridge provided apis
  *
- * The version of the OpenAPI document: 1.0.10
+ * The version of the OpenAPI document: 1.0.11
  * Contact: heqiming@metasv.com
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -282,17 +282,23 @@ export interface VaultInfoResponse {
      */
     depositConfirmation?: number;
     /**
-     * Gas fee to cover onchain transfer. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend
+     * Gas fee to cover onchain transfer. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend - withdrawBridgeFeeFixed
      * @type {number}
      * @memberof VaultInfoResponse
      */
     withdrawGasFee?: number;
     /**
-     * The service fee rate of bridge. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend
+     * The service fee rate of bridge. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend - withdrawBridgeFeeFixed
      * @type {string}
      * @memberof VaultInfoResponse
      */
     withdrawBridgeFeeRate?: string;
+    /**
+     * The service fee fixed amount of bridge. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend - withdrawBridgeFeeFixed
+     * @type {number}
+     * @memberof VaultInfoResponse
+     */
+    withdrawBridgeFeeFixed?: number;
 }
 
 /**
