# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: MVC Bridge API Spec
   description: API definition for Mvc Bridge provided apis
-  version: 1.0.10
+  version: 1.0.11
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
@@ -170,12 +170,16 @@ components:
             description: The confirmation needed for the deposit transaction.
             type: integer
         withdrawGasFee:
-            description: Gas fee to cover onchain transfer. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend
+            description: Gas fee to cover onchain transfer. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend - withdrawBridgeFeeFixed
             type: integer
             format: int64
         withdrawBridgeFeeRate:
-            description: The service fee rate of bridge. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend
+            description: The service fee rate of bridge. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend - withdrawBridgeFeeFixed
             type: string
+        withdrawBridgeFeeFixed:
+            description: The service fee fixed amount of bridge. AmountYouReceive = amountYouSent - withdrawGasFee - withdrawBridgeFeeRate * amountYouSend - withdrawBridgeFeeFixed
+            type: integer
+            format: int64
     OrderRegisterRequest:
       type: object
       description: Register a bridging request.
